# storage/api-docs/api-docs.json
@@ -512,6 +512,140 @@
                 }
             }
         },
+        "/api/content": {
+            "get": {
+                "tags": [
+                    "Новости/Контент"
+                ],
+                "summary": "Получить список баннеров",
+                "description": "Возвращает список баннеров в зависимости от типа доступа и индекса",
+                "operationId": "getBanners",
+                "parameters": [
+                    {
+                        "name": "index",
+                        "in": "query",
+                        "description": "Индекс для фильтрации",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список баннеров",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer"
+                                            },
+                                            "title": {
+                                                "type": "string"
+                                            },
+                                            "access_type": {
+                                                "type": "string"
+                                            },
+                                            "index_code": {
+                                                "type": "string"
+                                            },
+                                            "image_url": {
+                                                "type": "string"
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
+                    }
+                }
+            }
+        },
+        "/api/sliders": {
+            "get": {
+                "tags": [
+                    "Слайды"
+                ],
+                "summary": "Получить список слайдов",
+                "description": "Возвращает список слайдов в зависимости от типа доступа и индекса",
+                "operationId": "getSliders",
+                "parameters": [
+                    {
+                        "name": "index",
+                        "in": "query",
+                        "description": "Индекс для фильтрации",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список слайдов",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer"
+                                            },
+                                            "title": {
+                                                "type": "string"
+                                            },
+                                            "access_type": {
+                                                "type": "string"
+                                            },
+                                            "index_code": {
+                                                "type": "string"
+                                            },
+                                            "image_url": {
+                                                "type": "string"
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
+                    }
+                }
+            }
+        },
         "/api/auth-banners": {
             "get": {
                 "tags": [
@@ -770,6 +904,14 @@
         {
             "name": "Admin",
             "description": "Admin"
+        },
+        {
+            "name": "Новости/Контент",
+            "description": "Новости/Контент"
+        },
+        {
+            "name": "Слайды",
+            "description": "Слайды"
         },
         {
             "name": "3аставки для авторизации",
